Fixed CV modal visibility on mobile

--- a/style.css
+++ b/style.css
@@ -387,15 +387,15 @@ section {
 /* CLOSE BUTTON */
 .cv-close {
     position: fixed; 
-    top: 20px;
-    right: 20px;
-    font-size: 28px;
+    top: 15px;
+    right: 15px;
+    font-size: 30px;
     color: white;
     background: rgba(0,0,0,0.6);
     padding: 10px 14px;
     border-radius: 50%;
     cursor: pointer;
-    z-index: 99999;
+    z-index: 2000;
 }
 
 .close {
@@ -502,6 +502,11 @@ section {
         width: 100%;
         height: 100%;
         border-radius: 0; /* remove curves for full screen */
+    }
+    #cvFrame {
+    width: 100%;
+    height: 100%;
+    border: none;
     }
 
     
